base/src/test/resources/failure/projection/issues2/issue34.aya.txt
In file $FILE:9:80 ->

  7 | def infix = {A : Type} => Eq A
  8 | 
  9 | def psqueeze {A : Type} {a a' : A} (p : a = a') (i : I) : a = p i => \j => p (I.squeeze i j)
                                                                                      ^-----^

Error: Unknown field `squeeze` projected

Resolving interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
